--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,9 @@
 <section class="todoapp">
   <header class="header">
-    <h1>todos</h1>
+    <h1>To-Dos</h1>
+      <form id="new form">
+        <input type="text" class="new-todo" />
+      </form>
   </header>
 
   <section class="main">
@@ -14,38 +17,49 @@
 
 <script>
   $(function() {
-    $.get("/tasks").success( function( data ) {
-      var htmlString = "";
+    $('#new-form').submit(function(event) {
+      event.preventDefault();
+      var textbox = $('.new-todo');
+      console.log("Task: ", textbox.val());
+    });
 
-      $.each(data, function(index,  task) {
-        var checkedStatus = task.done? "checked": "";
-        var liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
+
+
+    function taskHtml(task) {
+      var checkedStatus = task.done ? "checked" : "";
+      var liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
         " data-id='" + task.id + "'" +
         checkedStatus +
         '><label>' +
-          task.title +
-          '</label></div></li>';
-          htmlString += liElement;
+         task.title +
+         '</label></div></li>';
+
+      return liElement;
+    }
+
+    function toggleTask(e) {
+      var itemId = $(e.target).data("id");
+      var doneValue = Boolean($(e.target).is(':checked'));
+
+      $.post("/tasks/" + itemId, {
+        _method: "PUT",
+        task: {
+          done: doneValue
+        }
+      });
+    }
+
+      $.get("/tasks").success( function( data ) {
+        var htmlString = "";
+
+        $.each(data, function(index,  task) {
+          htmlString += taskHtml(task);
         });
-      var ulTodos = $('.todo-list');
-      ulTodos.html(htmlString);
+        var ulTodos = $('.todo-list');
+        ulTodos.html(htmlString);
 
-      $('.toggle').change(function(e) {
-        var itemId = $(e.target).data("id");
-        console.log(itemId);
-
-        var doneValue = Boolean($(e.target).is(':checked'));
-        console.log("done:", doneValue);
-
-        $.post("/tasks/" + itemId, {
-          _method: "PUT",
-          task: {
-            done: doneValue
-          }
-        });
+        $('.toggle').change(toggleTask);
 
       });
-
     });
-  });
 </script>
