modified form submission

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -17,16 +17,7 @@
 
 <script>
   $(function() {
-    $('#new-form').submit(function(event) {
-      event.preventDefault();
-      var textbox = $('.new-todo');
-      var payload = {
-        task: {
-          title: textbox.val()
-        }
-      };
-      console.log(payload);
-    });
+
 
     function taskHtml(task) {
       var checkedStatus = task.done ? "checked" : "";
@@ -62,7 +53,24 @@
         ulTodos.html(htmlString);
 
         $('.toggle').change(toggleTask);
-
       });
+
+      $('#new-form').submit(function(event) {
+        event.preventDefault();
+        var textbox = $('.new-todo');
+        var payload = {
+          task: {
+            title: textbox.val()
+          }
+      };
+
+      $.post("/tasks", payload).success(function(data) {
+        var htmlString = taskHtml(data);
+        var ulTodos = $('.todo-list');
+        ulTodos.append(htmlString);
+        $('.toggle').click(toggleTask);
+      });
+    });
+
     });
 </script>
