--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,9 +1,9 @@
 <section class="todoapp">
   <header class="header">
     <h1>To-Dos</h1>
-      <form id="new form">
-        <input type="text" class="new-todo" />
-      </form>
+    <form id="new-form">
+      <input type="text" class="new-todo" />
+    </form>
   </header>
 
   <section class="main">
@@ -12,65 +12,3 @@
     </ul>
   </section>
 </section>
-
-</section>
-
-<script>
-  $(function() {
-
-
-    function taskHtml(task) {
-      var checkedStatus = task.done ? "checked" : "";
-      var liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
-        " data-id='" + task.id + "'" +
-        checkedStatus +
-        '><label>' +
-         task.title +
-         '</label></div></li>';
-
-      return liElement;
-    }
-
-    function toggleTask(e) {
-      var itemId = $(e.target).data("id");
-      var doneValue = Boolean($(e.target).is(':checked'));
-
-      $.post("/tasks/" + itemId, {
-        _method: "PUT",
-        task: {
-          done: doneValue
-        }
-      });
-    }
-
-      $.get("/tasks").success( function( data ) {
-        var htmlString = "";
-
-        $.each(data, function(index,  task) {
-          htmlString += taskHtml(task);
-        });
-        var ulTodos = $('.todo-list');
-        ulTodos.html(htmlString);
-
-        $('.toggle').change(toggleTask);
-      });
-
-      $('#new-form').submit(function(event) {
-        event.preventDefault();
-        var textbox = $('.new-todo');
-        var payload = {
-          task: {
-            title: textbox.val()
-          }
-      };
-
-      $.post("/tasks", payload).success(function(data) {
-        var htmlString = taskHtml(data);
-        var ulTodos = $('.todo-list');
-        ulTodos.append(htmlString);
-        $('.toggle').click(toggleTask);
-      });
-    });
-
-    });
-</script>
