formatted index scss

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,7 +2,7 @@
   <header class="header">
     <h1>To-Dos</h1>
     <form id="new-form">
-      <input type="text" class="new-todo" />
+      <input type="text" class="new-todo" placeholder="Enter To-Do Here" />
     </form>
   </header>
 
@@ -11,4 +11,11 @@
 
     </ul>
   </section>
+
+  <section class="author">
+    A <%= link_to "todo-mvc", "http://todomvc.com" %>
+    application, built by
+    <%= link_to "Ken Mazaika", "http://github.com/kenmazaika" %>
+  </section>
+
 </section>
